First comments with review

--- a/card.html
+++ b/card.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <!--TODO: комментарии этого типа создают таски-->
+    <!--ЭТО ОБЫЧНЫЙ КОММЕНТАРИЙ-->
+
     <div class = "flex-container">
     <div class = "information-block">
             <h2>Vega Sicilia "Unico" 2008</h2>
