--- a/card.html
+++ b/card.html
@@ -73,7 +73,14 @@
     </div>
     <div class = "extra">
         <h3>Дополнительно</h3>
+        <div class = "margins-extra">
         <div class = "critic"><div class = "score" >90</div><span class = "critic-name">RP</span></div>
+        <div class = "critic"><div class = "score" >17</div><span class = "critic-name">JR</span></div>
+        <div class = "critic"><div class = "score" >93</div><span class = "critic-name">Vinous</span></div>
+        <div class = "critic"><div class = "score" >95</div><span class = "critic-name">Decanter</span></div>
+        <div class = "critic"><div class = "score" >91</div><span class = "critic-name">WS</span></div>
+        </div>
+        <div class = "stock margins-extra"><span class="stock-text">в наличии</span></div>
     </div>
     </div>
     
